<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CityWatch</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="report">Report Issue</string>
    <string name="kudos">Give Kudos</string>
    <string name="volunteer">Volunteer</string>
    <string name="get_location">Get Location</string>
    <string name="set_location">Set Location</string>
    <string name="title">CityWatch</string>
    <string name="dept_info">Department Info</string>
    <string name="call">Call</string>
    <string name="email">Email</string>
    <string name="enter_name">Please Enter Name:</string>
    <string name="enter_tn">Please Enter Telephone Number</string>
    <string name="enter_email">Please Enter Email</string>
    <string name="enter_preset_address">Create Preset Address</string>

    <color name="light_blue">#ADD8E6</color>
    <color name="navy">#000080</color>
    <color name="royal_blue">#4169E1</color>

    <string name="title_activity_kudos">Kudos</string>
    <string name="title_activity_volunteer">Volunteer</string>
    <string name="title_activity_list_all_agencies">ListAllAgencies</string>
    <string name="listAll">Department Directory</string>
    <string name="title_activity_location">LocationActivity</string>
    <string name="getLocation">Get Location</string>

    <!-- Location User interface labels and strings -->


    <!-- Address format -->
    <string name="address_output_string">%1$s %2$s %3$s</string>

    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Menu title -->
    <string name="action_settings">Settings</string>

    <!-- Labels -->
    <string name="latlng">Lat/Long:</string>
    <string name="address">Address:</string>

    <!-- Messages -->
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="get_address">Get Address</string>
    <string name="get_location">Get Location</string>
    <string name="illegal_argument_exception">        Illegal arguments: Latitude %1$.8f Longitude %2$.8f</string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">        Location update error. code %1$d message %2$s</string>
    <string name="location_update_missing_update">        Location update error. No incoming location.</string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">        Can\'t request location updates, previous request hasn\'t finished</string>
    <string name="start_updates">Start Updates</string>
    <string name="stop_updates">Stop Updates</string>
    <string name="unknown">--Unknown--</string>
    <string name="unknown_activity_request_code">        Received an unknown activity request code %1$d in onActivityResult.</string>
    <string name="dept_directory">Department Directory</string>
    <string name="title_activity_email">EmailActivity</string>
    <string name="comments_hint">Comments</string>
    <string name="send">Send</string>
    <color name="orange">#FF9900</color>

</resources>
