<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >
    
    <TextView
        android:id="@+id/title"
        style="@style/Title"
		android:text="@string/title"/>
    
    <Button
        android:id="@+id/report"
        style="@style/Button.Big"
        android:text="@string/report"
        android:onClick="openReport" />
    
    <Button
        android:id="@+id/kudos"
        style="@style/Button.Big"
        android:text="@string/kudos"
        android:onClick="openKudos" />

    <Button
        android:id="@+id/volunteer"
        style="@style/Button.Big"
        android:text="@string/volunteer"
        android:onClick="openVolunteer" />

    <Button
        android:id="@+id/listAll"
        style="@style/Button.Big"
        android:onClick="openAllAgencies"
        android:text="@string/listAll" />

</LinearLayout>
