<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        style="@style/Title"
		android:text="@string/title"/>

    <Button
        android:id="@+id/get_location"
        style="@style/Button.Small"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/title"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/dept_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_location"
        android:layout_centerHorizontal="true"
        android:text="@string/dept_directory"
        android:textColor="@color/royal_blue"
        android:textSize="24sp" />

    <Spinner
        android:id="@+id/setLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dept_info"
        android:layout_alignLeft="@+id/title"
        android:layout_below="@+id/title" />

    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/email"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/dept_info"
        android:textSize="18sp" >

    </ListView>

    <Button
        android:id="@+id/email"
        style="@style/Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@android:id/list"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:onClick="sendEmail"
        android:text="@string/email" />

    <Button
        android:id="@+id/call"
        style="@style/Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/email"
        android:layout_alignBottom="@+id/email"
        android:layout_toRightOf="@+id/title"
        android:onClick="callNum"
        android:text="@string/call" />

</RelativeLayout>