<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/title"
        android:textColor="@color/navy"
        android:textSize="32sp" />

    <Button
        android:id="@+id/get_location"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/issueView"
        android:layout_below="@+id/title"
        android:layout_toLeftOf="@+id/title"
        android:text="@string/get_location" />

    <TextView
        android:id="@+id/dept_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/get_location"
        android:layout_centerHorizontal="true"
        android:text="@string/dept_info"
        android:textColor="@color/royal_blue"
        android:textSize="24sp" />

    <Button
        android:id="@+id/email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/call"
        android:layout_alignBottom="@+id/call"
        android:text="@string/email" />

    <ListView
        android:id="@+id/issueView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/call"
        android:layout_below="@+id/dept_info" >
    </ListView>

    <Spinner
        android:id="@+id/setLoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/dept_info"
        android:layout_alignLeft="@+id/title"
        android:layout_alignRight="@+id/issueView"
        android:layout_below="@+id/title" />
    
    <ListView
        android:id="@android:id/list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dept_info"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/email"
        android:layout_toLeftOf="@+id/call"
        android:textSize="18sp" />

    <Button
        android:id="@+id/call"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/issueView"
        android:layout_marginBottom="126dp"
        android:text="@string/call" />

</RelativeLayout>