<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="19dp"
        android:text="@string/title"
        android:textColor="@color/navy"
        android:textSize="32sp" />

    <EditText
        android:id="@+id/enter_name"
        android:inputType="textPersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10" />

    <EditText
        android:id="@+id/enter_tn"
        android:inputType="phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_name"
        android:layout_below="@+id/enter_name"
        android:layout_marginTop="40dp"
        android:ems="10" />

    <EditText
        android:id="@+id/enter_email"
        android:inputType="textEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_tn"
        android:layout_below="@+id/enter_tn"
        android:layout_marginTop="40dp"
        android:ems="10" />

    <EditText
        android:id="@+id/enter_preset_loc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/enter_email"
        android:layout_below="@+id/enter_email"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textPostalAddress"/>

    <TextView
        android:id="@+id/enter_email_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/enter_name_text"
        android:layout_below="@+id/enter_tn"
        android:text="@string/enter_email"
        android:textColor="@color/royal_blue" />

    <TextView
        android:id="@+id/enter_tn_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/enter_name"
        android:layout_below="@+id/enter_name"
        android:text="@string/enter_tn"
        android:textColor="@color/royal_blue" />

    <TextView
        android:id="@+id/enter_preset_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/title"
        android:layout_below="@+id/enter_email"
        android:text="@string/enter_preset_address"
        android:textColor="@color/royal_blue" />

    <TextView
        android:id="@+id/enter_name_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/enter_name"
        android:textColor="@color/royal_blue" />

"

</RelativeLayout>
